AR-21: Adding logic to add and remove seed papers from a project
